Fixed initialization error not showing

--- a/src/WebComponents/SignIn/sign-in.scss
+++ b/src/WebComponents/SignIn/sign-in.scss
@@ -24,7 +24,7 @@
         }
     }
 
-    &[initialization-error] #side {
+    &[initialization-error] vi-scroller {
         display: none;
     }
 
